# docs/swagger.json
@@ -18,6 +18,7 @@
     "paths": {
         "/urls/": {
             "post": {
+                "description": "Use json to generate url. If you want to create autogenerated key, leave key field empty.",
                 "consumes": [
                     "application/json"
                 ],
@@ -49,6 +50,9 @@
                     },
                     "400": {
                         "description": "Bad input data"
+                    },
+                    "409": {
+                        "description": "Already exists"
                     }
                 }
             }
@@ -153,6 +157,35 @@
                     },
                     "400": {
                         "description": "Bad input data"
+                    },
+                    "404": {
+                        "description": "No such url"
+                    }
+                }
+            }
+        },
+        "/{key}": {
+            "get": {
+                "produces": [
+                    "text/html"
+                ],
+                "summary": "Get redirection page",
+                "operationId": "redirect",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Url key",
+                        "name": "key",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "301": {
+                        "description": "If temporary redirect"
+                    },
+                    "308": {
+                        "description": "If permanent redirect"
                     },
                     "404": {
                         "description": "No such url"
